# hp-prince-e004-farminsight

./: .env.example  .gitignore  .plan  .prettierignore  Cargo.toml  README.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts
backend/: Cargo.toml
backend/migrations/: 20260720000100_baseline.sql  20260720000200_users.sql  20260720000300_teams.sql  20260720000400_team_invitations.sql  20260720000500_datasets.sql  20260720000600_dataset_schema_stats.sql  20260720000700_dataset_cached_outputs.sql
backend/src/: charts.rs  config.rs  csv_parser.rs  email.rs  insights.rs  main.rs  profiling.rs  storage.rs
backend/src/auth/: mod.rs
backend/src/db/: mod.rs
backend/src/http/: auth.rs  datasets.rs  middleware.rs  mod.rs  team_invitations.rs  team_members.rs
backend/src/models/: dataset.rs  mod.rs  team.rs  user.rs
deploy/: self-hosted.env.example
docs/: self-hosted.md
e2e/: core-flow.spec.ts
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: auth.ts  datasets.ts  teams.ts
frontend/src/auth/: AuthContext.ts  AuthProvider.tsx  RequireAuth.tsx
frontend/src/components/: AdaptiveChartGallery.tsx  DatasetUploadPanel.tsx  DrillDownPanel.tsx  InsightSummaryPanel.tsx
frontend/src/layout/: AppShell.tsx
frontend/src/pages/: AuthPanel.tsx  InsightsPage.tsx  LoginPage.tsx  NotFoundPage.tsx  RegisterPage.tsx  TeamPage.tsx  useAuthReturnPath.ts
scripts/: build-self-hosted.sh
