[package]
name = "farminsight-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0"
axum = "0.7"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = [
  "chrono",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
