[package]
name = "farminsight-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["multipart"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
dotenvy = "0.15"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-s3 = { version = "0.36.0", default-features = false, features = ["tokio-rustls-tls"] }
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = [
  "chrono",
  "derive",
  "json",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
thiserror = "2"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[lints]
workspace = true
